--- a/detectFaces.css
+++ b/detectFaces.css
@@ -1,3 +1,12 @@
+body {
+    font-family: 'Arial', sans-serif;
+  }
+
+.f1{
+    padding: 1%;
+    background-color:dodgerblue;
+}
+
 .f2 {
     display: flex;
     justify-content: space-between;
@@ -6,16 +15,20 @@
   }
 
 .c1 {
-    width: 50%;
     padding: 1%;
 }
 
 .c2 {
-    width: 50%;
+    width: 600px;
+    height: 600px;
     padding: 1%;
     border: 0.4rem dashed blue;
     text-align: center;
     border-radius: 3rem;
+}   
+
+.c2 img{
+    
 }
 
 h1{
@@ -28,4 +41,16 @@ h1{
 
 .c1 p{
     font-size: 20px;
+}
+
+.f4{
+    padding: 20px;
+    border: 0.4rem dashed rgb(151, 151, 245);
+    text-align: center;
+    border-radius: 3rem;
+}
+
+.f4 button{
+    width: 100%;
+    height: 50px;
 }
